fixes #112 (hide commish tools behind a toggle)

--- a/src/main/java/com/mayhew3/drafttower/client/pickcontrols/PickControlsWidget.css
+++ b/src/main/java/com/mayhew3/drafttower/client/pickcontrols/PickControlsWidget.css
@@ -33,8 +33,15 @@
   filter: literal("progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9d9ff', endColorstr='#ffffff',GradientType=0 )"); /* IE6-9 */
 }
 
-.force {
+.commish {
   border-color: red;
   color: red;
   font-weight: bold;
+  font-size: small;
+}
+
+.showCommish {
+  color: #15c;
+  font-size: small;
+  cursor: pointer;
 }
